Basic gravity and thrust control working

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,12 +9,14 @@
 				"/Zi",
 				"/EHsc",
 				"/nologo",
+				"/std:c++17",
 				"/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
 				"${workspaceFolder}/*.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",				
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
 				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\"",
 				"/SUBSYSTEM:WINDOWS"
 			],
