--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,22 +3,57 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "C/C++: cl.exe build active file",
+			"label": "build app",
 			"command": "cl.exe",
 			"args": [
 				"/Zi",
 				"/EHsc",
 				"/nologo",
 				"/std:c++17",
-				"/Fe${fileDirname}\\${fileBasenameNoExtension}.exe",
+				"/MD",
+				"/Fe${workspaceFolder}/app.exe",
 				"${workspaceFolder}/*.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
-				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\"",
+				"/I${workspaceFolder}/packages/gtest/include",
+				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:WINDOWS"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: cl.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "build tests",
+			"command": "cl.exe",
+			"args": [
+				"/Zi",
+				"/EHsc",
+				"/nologo",
+				"/std:c++17",
+				"/MD",
+				"/Fe${workspaceFolder}/test.exe",
+				"${workspaceFolder}/*.cpp",
+				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
+				"/I${workspaceFolder}/packages/gtest/include",
+				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
+				"/SUBSYSTEM:CONSOLE"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
