Game level rendering started

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
 				"/nologo",
 				"/std:c++17",
 				"/MD",
+				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/app.exe",
 				"${workspaceFolder}/source/*.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
@@ -44,6 +45,7 @@
 				"/nologo",
 				"/std:c++17",
 				"/MD",
+				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/test.exe",
 				"${workspaceFolder}/source/*.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
