--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,7 @@
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/app.exe",
 				"${workspaceFolder}/source/*.cpp",
+				"${workspaceFolder}/source/framework/*.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
