Loads all level files that exists

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
 				"/Zi",
 				"/EHsc",
 				"/nologo",
-				"/std:c++17",
+				"/std:c++latest",
+				"/await",
 				"/MD",
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/app.exe",
@@ -45,11 +46,13 @@
 				"/Zi",
 				"/EHsc",
 				"/nologo",
-				"/std:c++17",
+				"/std:c++latest",
+				"/await",
 				"/MD",
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/test.exe",
 				"${workspaceFolder}/source/*.cpp",
+				"${workspaceFolder}/source/framework/*.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
