--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,10 +12,12 @@
 				"/std:c++latest",
 				"/await",
 				"/MD",
+				"/Yupch.h",
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/app.exe",
 				"${workspaceFolder}/source/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
+				"${workspaceFolder}/build/pch.obj",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
@@ -23,8 +25,46 @@
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
+				"/I${workspaceFolder}/source/",
+				"/I${workspaceFolder}/source/framework/",
 				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"  /LIBPATH:\"C:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/lib\"",
 				"/SUBSYSTEM:WINDOWS"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: cl.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "build pch",
+			"command": "cl.exe",
+			"args": [
+				"/Zi",
+				"/EHsc",
+				"/nologo",
+				"/std:c++latest",
+				"/await",
+				"/MD",
+				"/Ycpch.h",
+				"/c",
+				"/Fo${workspaceFolder}/build/",
+				"${workspaceFolder}/source/pch/pch.cpp",
+				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
+				"/I${workspaceFolder}/packages/gtest/include",
+				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
+				"/I${workspaceFolder}/source/"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
