--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -95,10 +95,15 @@
 				"/await",
 				"/MD",
 				"/fp:fast",
+				"/Yupch.h",
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/test.exe",
 				"${workspaceFolder}/source/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
+				"${workspaceFolder}/source/screens/play/*.cpp",
+				"${workspaceFolder}/source/screens/main_menu/*.cpp",
+				"${workspaceFolder}/source/screens/level_edit/*.cpp",
+				"${workspaceFolder}/build/pch.obj",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
@@ -106,9 +111,14 @@
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
+				"/I${workspaceFolder}/source/",
+				"/I${workspaceFolder}/source/framework/",
 				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.33.31629/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"  /LIBPATH:\"C:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/lib\"",
 				"/SUBSYSTEM:CONSOLE"
 			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
 			"problemMatcher": [
 				"$msCompile"
 			],
