--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,18 +4,19 @@
 		{
 			"type": "cppbuild",
 			"label": "build app",
-			"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/bin/Hostx64/x64/cl.exe",
+			"command": "cl.exe",
 			"args": [
 				"/Zi",
 				"/EHsc",
 				"/nologo",
 				"/std:c++latest",
 				"/await",
-				"/MP",
 				"/MD",
 				"/W4",
 				"/WX",
 				"/fp:fast",
+				"/MP",
+				"/Yupch.h",
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/app.exe",
 				"${workspaceFolder}/source/*.cpp",
@@ -23,15 +24,16 @@
 				"${workspaceFolder}/source/screen_objects/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/shared",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/cppwinrt",
+				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/screen_objects",
 				"/I${workspaceFolder}/source/framework/",
-				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x86\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x86\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x86\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x86/Release\"",
+				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:WINDOWS"
 			],
 			"options": {
@@ -49,7 +51,7 @@
 		{
 			"type": "cppbuild",
 			"label": "build pch",
-			"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/bin/Hostx64/x64/cl.exe",
+			"command": "cl.exe",
 			"args": [
 				"/Zi",
 				"/EHsc",
@@ -65,10 +67,10 @@
 				"/Fo${workspaceFolder}/build/",
 				"${workspaceFolder}/source/pch/pch.cpp",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/shared",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/cppwinrt",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/source/"
@@ -88,7 +90,7 @@
 		{
 			"type": "cppbuild",
 			"label": "build tests",
-			"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/bin/Hostx64/x64/cl.exe",
+			"command": "cl.exe",
 			"args": [
 				"/Zi",
 				"/EHsc",
@@ -109,15 +111,15 @@
 				"${workspaceFolder}/source/screens/level_edit/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/shared",
+				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/cppwinrt",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/framework/",
-				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"  /LIBPATH:\"C:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/lib\"",
+				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"  /LIBPATH:\"C:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/lib\"",
 				"/SUBSYSTEM:CONSOLE"
 			],
 			"options": {
