--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,8 @@
 				"${workspaceFolder}/source/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
 				"${workspaceFolder}/source/screen_objects/*.cpp",
+				"${workspaceFolder}/source/screen_objects/active/*.cpp",
+				"${workspaceFolder}/source/screen_objects/passive/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
 				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
@@ -32,6 +34,8 @@
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/screen_objects",
+				"/I${workspaceFolder}/source/screen_objects/active",
+				"/I${workspaceFolder}/source/screen_objects/passive",
 				"/I${workspaceFolder}/source/framework/",
 				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:WINDOWS"
