--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,18 +24,18 @@
 				"${workspaceFolder}/source/screen_objects/active/*.cpp",
 				"${workspaceFolder}/source/screen_objects/passive/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
-				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/shared",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/cppwinrt",
+				"/I%cpp_packages%/MSVC/14.35.32215/include",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
 				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/screen_objects/active",
 				"/I${workspaceFolder}/source/screen_objects/passive",
 				"/I${workspaceFolder}/source/framework/",
-				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
+				"/link /LIBPATH:\"%cpp_packages%/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/um/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:WINDOWS"
 			],
 			"options": {
@@ -68,11 +68,11 @@
 				"/c",
 				"/Fo${workspaceFolder}/build/",
 				"${workspaceFolder}/source/pch/pch.cpp",
-				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/shared",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/cppwinrt",
+				"/I%cpp_packages%/MSVC/14.35.32215/include",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/source/"
@@ -112,16 +112,16 @@
 				"${workspaceFolder}/source/screens/main_menu/*.cpp",
 				"${workspaceFolder}/source/screens/level_edit/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
-				"/IC:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/include",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/ucrt",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/um",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/shared",
-				"/IC:/Program Files (x86)/Windows Kits/10/Include/10.0.22621.0/cppwinrt",
+				"/I%cpp_packages%/MSVC/14.35.32215/include",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
+				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/framework/",
-				"/link /LIBPATH:\"C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/um/x64\" /LIBPATH:\"C:/Program Files (x86)/Windows Kits/10/Lib/10.0.22621.0/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"  /LIBPATH:\"C:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/lib\"",
+				"/link /LIBPATH:\"%cpp_packages%/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/um/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:CONSOLE"
 			],
 			"options": {
