--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "cppvsdbg",
       "request": "launch",
       "program": "${workspaceFolder}/app.exe",
-      "args": [],
+      "args": ["-w"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": []
