Options added to main menu

--- a/install_package/MicrosoftGame.config
+++ b/install_package/MicrosoftGame.config
@@ -2,8 +2,8 @@
 <Game
   configVersion="1">
   <Identity
-    Name="41336PublisherName.ExampleGame"
-    Publisher="CN=A4954634-DF4B-47C7-AB70-D3215D246AF1"
+    Name="63141GnarlyTyke.BuckWood"
+    Publisher="CN=36BC00C6-EA0D-4C79-8658-2A110AD2AA9E"
     Version="1.0.0.0" />
   <ShellVisuals
     StoreLogo="StoreLogo.png"
@@ -13,9 +13,10 @@
     SplashScreenImage="SplashScreenImage.png" />
   <ExecutableList>
     <Executable
-      Name="app.exe" />
+      Name="app.exe"
+      TargetDeviceFamily="Scarlett"/>
   </ExecutableList>
-  <MSAAppId>0000000000000000</MSAAppId>
+  <MSAAppId>84b9537a-cd43-48d8-a86a-afdd380b0ec7</MSAAppId>
   <TitleId>FFFFFFFF</TitleId>
   <AdvancedUserModel>true</AdvancedUserModel>
 </Game>
