--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,7 @@
 				"${workspaceFolder}/source/framework/*.cpp",
 				"${workspaceFolder}/source/screen_objects/active/*.cpp",
 				"${workspaceFolder}/source/screen_objects/passive/*.cpp",
+				"${workspaceFolder}/source/renderers/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/I%cpp_packages%/MSVC/14.35.32215/include",
 				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
@@ -35,6 +36,7 @@
 				"/I${workspaceFolder}/source/screen_objects/active",
 				"/I${workspaceFolder}/source/screen_objects/passive",
 				"/I${workspaceFolder}/source/framework/",
+				"/I${workspaceFolder}/source/renderers/",
 				"/link /LIBPATH:\"%cpp_packages%/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/um/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:WINDOWS"
 			],
@@ -121,6 +123,7 @@
 				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/framework/",
+				"/I${workspaceFolder}/source/renderers/",
 				"/link /LIBPATH:\"%cpp_packages%/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/um/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:CONSOLE"
 			],
