--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,7 @@
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/app.exe",
 				"${workspaceFolder}/source/*.cpp",
+				"${workspaceFolder}/source/play_screen/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
 				"${workspaceFolder}/source/screen_objects/active/*.cpp",
 				"${workspaceFolder}/source/screen_objects/passive/*.cpp",
@@ -33,6 +34,7 @@
 				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/I${workspaceFolder}/source/",
+				"/I${workspaceFolder}/source/play_screen",
 				"/I${workspaceFolder}/source/screen_objects/active",
 				"/I${workspaceFolder}/source/screen_objects/passive",
 				"/I${workspaceFolder}/source/framework/",
