--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,8 +22,8 @@
 				"${workspaceFolder}/source/*.cpp",
 				"${workspaceFolder}/source/play_screen/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
-				"${workspaceFolder}/source/screen_objects/active/*.cpp",
-				"${workspaceFolder}/source/screen_objects/passive/*.cpp",
+				"${workspaceFolder}/source/level_container/*.cpp",
+				"${workspaceFolder}/source/user_interface/*.cpp",
 				"${workspaceFolder}/source/renderers/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/I%cpp_packages%/MSVC/14.35.32215/include",
@@ -35,8 +35,8 @@
 				"/I${workspaceFolder}/packages/gtest/include",
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/play_screen",
-				"/I${workspaceFolder}/source/screen_objects/active",
-				"/I${workspaceFolder}/source/screen_objects/passive",
+				"/I${workspaceFolder}/source/level_container",
+				"/I${workspaceFolder}/source/user_interface",
 				"/I${workspaceFolder}/source/framework/",
 				"/I${workspaceFolder}/source/renderers/",
 				"/link /LIBPATH:\"%cpp_packages%/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/um/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
