--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,7 @@
 				"${workspaceFolder}/source/play_screen/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
 				"${workspaceFolder}/source/level_container/*.cpp",
+				"${workspaceFolder}/source/level_data/*.cpp",
 				"${workspaceFolder}/source/user_interface/*.cpp",
 				"${workspaceFolder}/source/renderers/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
@@ -36,6 +37,7 @@
 				"/I${workspaceFolder}/source/",
 				"/I${workspaceFolder}/source/play_screen",
 				"/I${workspaceFolder}/source/level_container",
+				"/I${workspaceFolder}/source/level_data",
 				"/I${workspaceFolder}/source/user_interface",
 				"/I${workspaceFolder}/source/framework/",
 				"/I${workspaceFolder}/source/renderers/",
