--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -113,22 +113,29 @@
 				"/Fo${workspaceFolder}/build/",
 				"/Fe${workspaceFolder}/test.exe",
 				"${workspaceFolder}/source/*.cpp",
+				"${workspaceFolder}/source/test/test.cpp",
+				"${workspaceFolder}/source/play_screen/*.cpp",
 				"${workspaceFolder}/source/framework/*.cpp",
-				"${workspaceFolder}/source/screens/play/*.cpp",
-				"${workspaceFolder}/source/screens/main_menu/*.cpp",
-				"${workspaceFolder}/source/screens/level_edit/*.cpp",
+				"${workspaceFolder}/source/level_container/*.cpp",
+				"${workspaceFolder}/source/level_container/objects/*.cpp",
+				"${workspaceFolder}/source/level_data/*.cpp",
+				"${workspaceFolder}/source/user_interface/*.cpp",
+				"${workspaceFolder}/source/renderers/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/I%cpp_packages%/MSVC/14.35.32215/include",
 				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
 				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
 				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
 				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
+				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/packages/gtest/include",
-				"/IC:/Users/mathe/source/repos/vcpkg/vcpkg/packages/jsoncpp_x64-windows/include/json",
 				"/I${workspaceFolder}/source/",
+				"/I${workspaceFolder}/source/play_screen",
+				"/I${workspaceFolder}/source/level_container",
+				"/I${workspaceFolder}/source/level_data",
+				"/I${workspaceFolder}/source/user_interface",
 				"/I${workspaceFolder}/source/framework/",
 				"/I${workspaceFolder}/source/renderers/",
-				"/link /LIBPATH:\"%cpp_packages%/MSVC/14.35.32215/lib/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/um/x64\" /LIBPATH:\"%cpp_packages%/Windows Kits/10.0.22621.0/Lib/ucrt/x64\" /LIBPATH:\"${workspaceFolder}/packages/jsoncpp_x64-windows/lib\" /LIBPATH:\"${workspaceFolder}/packages/gtest/lib/x64/Release\"",
 				"/SUBSYSTEM:CONSOLE"
 			],
 			"options": {
