--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,7 @@
 				"${workspaceFolder}/source/level_data/*.cpp",
 				"${workspaceFolder}/source/user_interface/*.cpp",
 				"${workspaceFolder}/source/renderers/*.cpp",
+				"${workspaceFolder}/source/geometry/*.cpp",
 				"${workspaceFolder}/build/pch.obj",
 				"/I%cpp_packages%/MSVC/14.35.32215/include",
 				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
