--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,3 +1,8 @@
 set(FILES
+  game_settings.cpp
+  game_state.cpp
+  main_menu_controller.cpp
+  main_menu_screen.cpp
   main.cpp
-  )
+  save_data.cpp
+)
