--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,37 @@ foreach(FILE ${FILES})
   set(collisions ${collisions} source/collisions/${FILE})
 endforeach()
 
-add_executable(buck_wood ${source} ${framework} ${collisions})
+include(source/geometry/CMakeLists.txt)
+foreach(FILE ${FILES})
+  set(geometry ${geometry} source/geometry/${FILE})
+endforeach()
+
+include(source/level_container/CMakeLists.txt)
+foreach(FILE ${FILES})
+  set(level_container ${level_container} source/level_container/${FILE})
+endforeach()
+
+include(source/level_data/CMakeLists.txt)
+foreach(FILE ${FILES})
+  set(level_data ${level_data} source/level_data/${FILE})
+endforeach()
+
+include(source/play_screen/CMakeLists.txt)
+foreach(FILE ${FILES})
+  set(play_screen ${play_screen} source/play_screen/${FILE})
+endforeach()
+
+include(source/renderers/CMakeLists.txt)
+foreach(FILE ${FILES})
+  set(renderers ${renderers} source/renderers/${FILE})
+endforeach()
+
+include(source/user_interface/CMakeLists.txt)
+foreach(FILE ${FILES})
+  set(user_interface ${user_interface} source/user_interface/${FILE})
+endforeach()
+
+add_executable(buck_wood WIN32 ${source} ${framework} ${collisions} ${geometry} ${level_container} ${level_data} ${play_screen} ${renderers} ${user_interface})
 
 target_include_directories(buck_wood PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/source
