--- a/.gitignore
+++ b/.gitignore
@@ -42,12 +42,13 @@
 CMakeFiles
 *.vcxproj
 *.vcxproj.filters
-*.cmake
-*CMakeCache.txt
+cmake_install.cmake
+CMakeCache.txt
 *.sln
-*.lastbuildstate
-*.tlog
 x64/
+Debug/
+buck_wood.dir/
+build/
 
 # my project
 log.txt
