cmake build updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 
+project(buck-wood)
+
 set(CMAKE_CXX_STANDARD 20)
 
 include(source/CMakeLists.txt)
@@ -52,9 +54,16 @@ foreach(FILE ${FILES})
   set(user_interface ${user_interface} source/user_interface/${FILE})
 endforeach()
 
-add_executable(buck_wood WIN32 ${source} ${framework} ${collisions} ${geometry} ${level_container} ${level_objects} ${level_data} ${play_screen} ${renderers} ${user_interface})
+add_executable(buck_wood ${source} ${framework} ${collisions} ${geometry} ${level_container} ${level_objects} ${level_data} ${play_screen} ${renderers} ${user_interface})
 
-target_include_directories(buck_wood PUBLIC
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+  target_compile_options(buck_wood PRIVATE /MP /MTd /Zi /W4 /WX /fp:fast)
+  target_link_options(buck_wood PRIVATE /SUBSYSTEM:WINDOWS)
+endif()
+
+target_precompile_headers(buck_wood PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source/pch.h)
+
+target_include_directories(buck_wood PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/source
   ${CMAKE_CURRENT_SOURCE_DIR}/source/framework
   ${CMAKE_CURRENT_SOURCE_DIR}/source/collisions
