vs code build task is now cmake build

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,145 +3,11 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "build app",
-			"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.39.33519/bin/Hostx64/x64/cl.exe",
+			"label": "build",
+			"command": "cmake",
 			"args": [
-				"/Zi",
-				"/EHsc",
-				"/nologo",
-				"/std:c++latest",
-				"/await",
-				"/MD",
-				"/W4",
-				"/WX",
-				"/fp:fast",
-				"/MP",
-				"/Yupch.h",
-				"/Fo${workspaceFolder}/build/",
-				"/Fe${workspaceFolder}/app.exe",
-				"${workspaceFolder}/source/*.cpp",
-				"${workspaceFolder}/source/play_screen/*.cpp",
-				"${workspaceFolder}/source/framework/*.cpp",
-				"${workspaceFolder}/source/level_container/*.cpp",
-				"${workspaceFolder}/source/level_container/objects/*.cpp",
-				"${workspaceFolder}/source/level_data/*.cpp",
-				"${workspaceFolder}/source/user_interface/*.cpp",
-				"${workspaceFolder}/source/renderers/*.cpp",
-				"${workspaceFolder}/source/geometry/*.cpp",
-				"${workspaceFolder}/source/collisions/*.cpp",
-				"${workspaceFolder}/build/pch.obj",
-				"/I%cpp_packages%/MSVC/14.35.32215/include",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
-				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
-				"/I${workspaceFolder}/source/",
-				"/I${workspaceFolder}/source/play_screen",
-				"/I${workspaceFolder}/source/level_container",
-				"/I${workspaceFolder}/source/level_data",
-				"/I${workspaceFolder}/source/user_interface",
-				"/I${workspaceFolder}/source/framework/",
-				"/I${workspaceFolder}/source/renderers/",
-				"/I${workspaceFolder}/source/collisions/",
-				"/link",
-				"/SUBSYSTEM:WINDOWS"
-			],
-			"options": {
-				"cwd": "${workspaceFolder}"
-			},
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"detail": "compiler: cl.exe"
-		},
-		{
-			"type": "cppbuild",
-			"label": "build pch",
-			"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.39.33519/bin/Hostx64/x64/cl.exe",
-			"args": [
-				"/Zi",
-				"/EHsc",
-				"/nologo",
-				"/std:c++latest",
-				"/await",
-				"/MD",
-				"/W4",
-				"/WX",
-				"/fp:fast",
-				"/Ycpch.h",
-				"/c",
-				"/Fo${workspaceFolder}/build/",
-				"${workspaceFolder}/source/pch/pch.cpp",
-				"/I%cpp_packages%/MSVC/14.35.32215/include",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
-				"/I${workspaceFolder}/packages/gtest/include",
-				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
-				"/I${workspaceFolder}/source/"
-			],
-			"options": {
-				"cwd": "${workspaceFolder}"
-			},
-			"problemMatcher": [
-				"$msCompile"
-			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"detail": "compiler: cl.exe"
-		},
-		{
-			"type": "cppbuild",
-			"label": "build tests",
-			"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.39.33519/bin/Hostx64/x64/cl.exe",
-			"args": [
-				"/Zi",
-				"/EHsc",
-				"/nologo",
-				"/std:c++latest",
-				"/await",
-				"/MD",
-				"/W4",
-				"/WX",
-				"/fp:fast",
-				"/Yupch.h",
-				"/Fo${workspaceFolder}/build/",
-				"/Fe${workspaceFolder}/test.exe",
-				"${workspaceFolder}/source/*.cpp",
-				"${workspaceFolder}/source/test/test.cpp",
-				"${workspaceFolder}/source/play_screen/*.cpp",
-				"${workspaceFolder}/source/framework/*.cpp",
-				"${workspaceFolder}/source/level_container/*.cpp",
-				"${workspaceFolder}/source/level_container/objects/*.cpp",
-				"${workspaceFolder}/source/level_data/*.cpp",
-				"${workspaceFolder}/source/user_interface/*.cpp",
-				"${workspaceFolder}/source/renderers/*.cpp",
-				"${workspaceFolder}/build/pch.obj",
-				"/I%cpp_packages%/MSVC/14.35.32215/include",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/ucrt",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/um",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/shared",
-				"/I%cpp_packages%/Windows Kits/10.0.22621.0/Include/cppwinrt",
-				"/I${workspaceFolder}/packages/jsoncpp_x64-windows/include/json",
-				"/I${workspaceFolder}/packages/gtest/include",
-				"/I${workspaceFolder}/source/",
-				"/I${workspaceFolder}/source/play_screen",
-				"/I${workspaceFolder}/source/level_container",
-				"/I${workspaceFolder}/source/level_data",
-				"/I${workspaceFolder}/source/user_interface",
-				"/I${workspaceFolder}/source/framework/",
-				"/I${workspaceFolder}/source/renderers/",
-				"/link",
-				"/LIBPATH:${workspaceFolder}/packages/gtest/lib/x64/Release",
-				"/SUBSYSTEM:CONSOLE"
+				"--build",
+				"."
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
